--- a/desafiohtml/d012/estilo/style.css
+++ b/desafiohtml/d012/estilo/style.css
@@ -1,1 +1,71 @@
 @charset "utf-8";
+/* configurações gerais*/
+*{
+    margin: 0px;
+    padding: 0px;
+}
+html, body{
+    background-color: darkgrey;
+    min-height: 100vh;
+
+}
+/* cabeçalho ..*/
+header{
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header>h1{
+    padding-top: 50px;
+    font-variant: small-caps;   
+}
+
+header>p{
+    padding-bottom: 50px;
+}
+
+/*liks ..*/
+a{
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+a:hover{
+    text-decoration: underline;
+}
+
+/* parte principal do site */
+section{
+    padding-top: 10%;
+    padding-bottom: 10%;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+section.normal{
+    background-color: white;
+    color: black;
+}
+
+section.imagem{
+    background-color: rgb(137, 130, 130);
+    color: white;
+}
+
+section.imagem > p {
+    width: 400px;
+    background-color: rgb(41, 41, 41);
+}
+
+
+
+
+
+/*rodapé... */
+footer{
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding: 10px;
+}
