--- a/desafiohtml/d012/estilo/style.css
+++ b/desafiohtml/d012/estilo/style.css
@@ -1,5 +1,16 @@
 @charset "utf-8";
 /* configurações gerais*/
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --font01: verdana, geneva ,tahoma, sans-serif;
+    --font02: 'Passion One', cursive;
+    --font03: 'Sriracha', cursive;
+
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -7,6 +18,7 @@
 html, body{
     background-color: darkgrey;
     min-height: 100vh;
+    font-family: var(--font01);
 
 }
 /* cabeçalho ..*/
@@ -18,7 +30,9 @@ header{
 
 header>h1{
     padding-top: 50px;
-    font-variant: small-caps;   
+    font-variant: small-caps;
+    font-family: var(--font02); 
+    font-size: 10vw  
 }
 
 header>p{
@@ -41,23 +55,42 @@ section{
     padding-bottom: 10%;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font03);
+    font-size: 3vw;
+}
+
+section > P {
+    padding-bottom: 2em;
 }
 
 section.normal{
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     color: black;
 }
 
 section.imagem{
-    background-color: rgb(137, 130, 130);
+    background-color: rgb(28, 27, 27);
     color: white;
 }
 
 section.imagem > p {
-    width: 400px;
-    background-color: rgb(41, 41, 41);
+    display: inline-block;
+    background-color: rgba(41, 41, 41, 0.023);
+    padding: 6px;
 }
 
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center ;
+    background-size: cover;
+
+}
+
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center ;
+    background-size: cover;
+}
 
 
 
