--- a/desafiohtml/d012/estilo/style.css
+++ b/desafiohtml/d012/estilo/style.css
@@ -71,6 +71,10 @@ section.normal{
 section.imagem{
     background-color: rgb(28, 27, 27);
     color: white;
+    background-size: cover;
+    box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.522);
+    background-attachment: fixed;
+
 }
 
 section.imagem > p {
@@ -82,14 +86,14 @@ section.imagem > p {
 section#img01{
     background-image: url('../imagens/background001.jpg');
     background-position: right center ;
-    background-size: cover;
+    
 
 }
 
 section#img02{
     background-image: url(../imagens/background002.jpg);
     background-position: right center ;
-    background-size: cover;
+   
 }
 
 
